syntax = "proto3";

package credential;

service Cred {
    rpc Login (RequestModel) returns (UserAccountModel) {}
    rpc Authentize (RequestModel) returns (UserAccountModel) {}
    rpc Logoff (RequestModel) returns (EmptyModel) {}
    rpc Autologoff (RequestModel) returns (EmptyModel) {}
    rpc EmergencyLogin (RequestModel) returns (EmptyModel) {}
    rpc GetADServer (EmptyModel) returns (LDAPServerModel) {}
    rpc SetADServer (LDAPServerModel) returns (EmptyModel) {}
    rpc ServiceMode (EmptyModel) returns (ServiceModel) {}
}

message RequestModel {
    string client = 1;
    string userName = 2;
    string password = 3;
    string firstName = 4;
    string lastName = 5;
    string eventText = 6;
}

message UserAccountModel {
    string userName = 1;
    string firstName = 2;
    string lastName = 3;
    int32 groupFlag = 4;
    int32 daysToExpiredPassword = 5;
    bool lockedOut = 6;
    bool disabled = 7;
    bool passwordNeverExpires = 8;
    bool passwordChangeNeeded = 9;
    bool passwordExpired = 10;
    bool accountExpired = 11;	
    bool isValid = 12;
}

message LDAPServerModel{
    int32 serverId = 1;
}

message ServiceModel{
    bool isServiceMode = 1;
}

message EmptyModel {

}